--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/core": "^1.0.0-beta20",
+    "@tabler/icons": "^2.47.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
